--- a/doc/semantics/preamble.tex
+++ b/doc/semantics/preamble.tex
@@ -1,6 +1,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % FMCAD STYLE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% !BIB TS-program = biber
+% !BIB program = biber
+
 \newif\iffmcad
 \newif\ifnotfmcad
 %\fmcadtrue
@@ -24,6 +28,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\pagestyle{plain}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % DEVELOPMENT
